# q2-taxa-clean

./: .gitignore  README.md  setup.cfg
q2_taxa_clean/: __init__.py  _methods.py  plugin_setup.py
tests/: test_methods.py
