[metadata]
name = q2-taxa-clean
version = attr: q2_taxa_clean.__version__
author = ssaundy
description = QIIME 2 plugin for cleaning and simplifying taxonomy strings
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
url = https://github.com/ssaundy/q2-taxa-clean
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    qiime2
    q2-types
    pandas

[options.entry_points]
# This is what tells QIIME2 that this package is a plugin.
# QIIME2 scans installed packages for this entry point on startup.
qiime2.plugins =
    q2-taxa-clean = q2_taxa_clean.plugin_setup:plugin
